# Fasta_ToolsBox

./: README.md  pyproject.toml
fasta_tools/: SeqMetric.py  __init__.py  utils.py
