[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fasta_tools"
version = "0.1.0"
description = "FASTA utilities for bioinformatics pipelines"

[tool.setuptools.packages.find]
where = ["."]
include = ["fasta_tools"]

[tool.setuptools]
packages = ["fasta_tools"]
